<resources>
    <string name="email_example">example@mpei.ru</string>
    <string name="password">Пароль</string>
    <string name="auth">Войти</string>
    <string name="register">Регистрация</string>
    <string name="forgot_pass"><u>Забыли пароль?</u></string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="group">Группа</string>
    <string name="email">ОСЭП</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="is_register">Уже зарегистрированы?</string>
    <string name="not_student">Не студент</string>
    <string name="other">Другое</string>

    <string name="finish_signup_message">
        Для завершения регистрации пройдите по ссылке в письме, которое придет на вашу почту в течении нескольких минут
    </string>

    <string name="restore_pass">Восстановление пароля</string>
    <string name="restore_pass_description">
        Введите адрес своей почты ОСЭП для восстановления пароля.
        На нее придет письмо с дальнейшими инструкциями.
    </string>

    <string name="name_error">Неверно указано имя!</string>
    <string name="surname_error">Неверно указана фамилия!</string>
    <string name="group_error">Неверно указана группа!</string>
    <string name="email_error">Ошибка в почте!</string>
    <string name="pass_error">Пароль и его повторение не совпадают!</string>
</resources>